homelab/templates/traefik-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app: traefik-dashboard
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: kube-system
  labels:
    app: traefik-metrics
spec:
  ports:
    - protocol: TCP
      port: 9100
      targetPort: 9100
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  tls:
    - secretName: "le-cert"
    - hosts:
        - traefik.sethpyle.com
  rules:
    - host: traefik.sethpyle.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
